# pymahjongutil

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
pymahjong/: agari_checker.py  deficiency_calculator.py  efficiency_calculator.py  exception.py  hand_parser.py
pymahjong/enum/: common.py
pymahjong/hand_checker/: hand_checker.py  normal_checker.py  riichi_checker.py  seven_pair_checker.py  thirteen_orphan_checker.py
pymahjong/point_calculator/: fu_calculator.py  han_calculator.py  point_calculator.py
pymahjong/rule/: riichi_default_rule.py
pymahjong/schema/: agari_info.py  call.py  count.py  division.py  efficiency_data.py  hand.py  point_info.py  quasi_decomposition.py  tile.py  yaku_rule.py
pymahjong/yaku_checker/: __init__.py  all_greens.py  all_honors.py  all_sequences.py  all_simples.py  all_terminals.py  all_terminals_and_honors.py  all_triplets.py  base_yaku.py  base_yakuman.py  big_four_winds.py  big_three_dragons.py  dead_wall_draw.py  double_ready.py  earthly_hand.py  flush.py  four_concealed_triplets.py  four_quads.py  green_dragon.py  half_flush.py  half_outside_hand.py  heavenly_hand.py  identical_sequences.py  nine_gates.py  one_shot.py  player_wind.py  pure_outside_hand.py  ready.py  red_dragon.py  robbing_a_quad.py  round_wind.py  self_draw.py  seven_pairs.py  small_four_winds.py  small_three_dragons.py  (+10 more)
pymahjongutil/: hand_parser.py
src/: agari_checker.py  constants.py  deficiency_calculator.py  efficiency_calculator.py  hand_parser.py  shanten_calculator.py
tests/: test_hand_parser.py
(+224 files in other folders)
