[tool.poetry]
name = "mahjongrepo"
version = "0.1.0"
description = ""
authors = ["Taeho Gwon <taehogwon96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.9.0"
mahjong = "^1.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.1"
mypy = "^1.3.0"
pytest = "^7.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
