[tool.poetry]
name = "pymahjongutil"
version = "0.1.0"
description = ""
authors = ["Taeho Gwon <taehogwon96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.9.0"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
mypy = "^1.3.0"
pytest = "^7.0.0"
flake8 = "^6.0.0"
autoflake = "^2.1.1"
isort = "^5.12.0"
black = "^23.3.0"
coverage = "^7.2.7"
setuptools = "^68.2.2"
wheel = "^0.41.3"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
